-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.3.0-beta1
-
None
When adding Qt Quick files to a Qt Quick Application the .qrc is not the default.
1) Create a Qt Quick Application
2) Add a Qt Quick file using
3) The Qt Quick file is not added to the .qrc file by default
For Gerrit Dashboard: QTCREATORBUG-13406 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
100398,3 | JsonSummaryPage: Fix selection of best project node | 3.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |