JsonSummaryPage: Fix selection of best project node

Broke in 7db9c37b2dc0af696eea2814db0f06559b5a3bdb, which accidently
resulted in passing in a empty list to initializeProjectTree

Task-number: QTCREATORBUG-13406
Change-Id: I24aa52fef0eaebb335624f8e31cd05778a2da6a2
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>